public_html/discuss/bb_default_style.css
/* ... */
/* List style - user's info */

.limbb{
list-style: circle;
font-size: 11px;
margin-left: 15px;
}

/* Input areas - boxes, textareas... */

.inputButton {
font-family: Georgia, Verdana, Arial;
background: #FFFFFF;
border-top: #CCCCCC 1px solid;
border-right: #CCCCCC 1px solid;
border-left: #CCCCCC 1px solid;
border-bottom: #CCCCCC 1px solid;
color: #000000;
}

.inputButton:active {
    background-color: silver;
    border: 1px solid gray;
    color: gray;
}


.textForm {
font-family: Georgia, Verdana, Arial;
background: #FFFFFF;
border-bottom: #CCCCCC 1px solid;
border-left: #CCCCCC 1px solid;
border-right: #CCCCCC 1px solid;
border-top: #CCCCCC 1px solid;
}

/* Caption 1 (the one for displaying sub-headers like "topics, posted" etc) */

td.caption1 {
border: 1px #E3E3E3 solid;
font-size: 11px;
line-height: 15px;
padding-bottom: 1px;
padding-left: 5px;
padding-right: 5px;
padding-top: 2px;
}

/* Caption 2 color and properties (this one displaying main menu,  New Topic text bg, New Message text bg) */

td.caption2 {
background-color: #FFFFFF;
border: 1px #CCCCCC dotted;
padding: 4px;
height: 20px;
font-size: 11px;
font-weight: bold;
line-height: 15px;
}

/* Caption 3 (used for Last Discussions, topic titles, Forums selection) */

td.caption3 {
background-color: #F3F9FB;
padding: 3px;
height: 20px;
font-size: 11px;
line-height: 15px;
}

/* Caption 4 (the one for displaying not separate headers like Forum, Topic, Poster etc. on 1st page, Buttons menu, left info cell) */

td.caption4 {
background-color: #000066;
padding-bottom: 2px;
padding-left: 5px;
padding-right: 5px;
padding-top: 2px;
font-size: 11px;
font-weight: bold;
color: #FFFFFF;
line-height: 15px;
}

/* Caption 5 (used for user input like password/login and registration etc) */

td.caption5 {
background-color: #F6F9FB;
padding: 4px;
height: 20px;
font-size: 11px;
line-height: 15px;
}

/* Caption 6 (this one is for displaying title headers (search, stats, user reg/prefs) ) */

td.caption6 {
background-color: #F3F9FB;
border: 1px #E4EEF3 solid;
padding: 4px;
height: 18px;
font-size: 11px;
font-weight: bold;
}

/* Font for displaying username in each thread */

.username{
text-decoration: none;
font-size: 11px;
font-weight: bold;
}

/* Topics/forums/threads content cell color #1 */

.tbCel1{
background: #E9EFF4;
}

/* Topics/forums/threads content cell color #2 */

.tbCel2{
background: #F6F9FB;
}

.formStyle{
margin: 0px;
}

/* Stats bar */

.tbStBar{
border: #CCCCCC 1px solid;
margin: 1px;
padding: 1px;
background: #F0F0F0;
font-size: 11px;
}

div.maincontent A:link {
color: #006699;
text-decoration: none;
}

div.maincontent A:active {
color: #006699;
text-decoration: none;
}

div.maincontent A:visited {
color: #006699;
text-decoration: none;
}

div.maincontent A:hover {
color: #0083C5;
text-decoration: none;
}

table.forums div.photoguide {
	margin-left:0;
	margin-right:0;
	border-left:0;
	border-right:0;
	font-size:1.1em;
}

.caption1 .inapp {
	display:none;
	float:right;
	position:relative;
}

.caption1:hover .inapp {
	display:block;
}


{*Forum responsive layout - dsp 2024*}


{*Forum general functions*}

.forum-inline {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width=100%;
}
.forum-inline > div {
  flex-grow: 1;
  flex-basis: 0;
}

{*forum thread views*}

.forum-post-sticky {
  position: sticky;
  top: 0;
  width: 100%;
  background: cornsilk;
}
.forum-post-title {
  width: 100%;
  font-size: 1.5em;
  padding-top: 15px;
  padding-bottom: 15px;
  text-indent: 15px;
  font-weight: bold;
}
.forum-post-breadcrumbs {
  width: 100%;
  padding: 5px;
  margin: 5px; 
}
.forum-post-pages {
  width: 100%;
  padding: 5px;
  text-align: right;
  margin: 5px;
  white-space: nowrap;   
}
.forum-post-continued {
  text-align: right;
  font-weight: bold;
  padding-bottom: 5px;
}
.forum-post-grid {
  display: grid;
  grid-template-areas:
    'forum-post-header forum-post-header'
    'forum-post-user forum-post-post'
    'forum-post-footer forum-post-footer';
  grid-template-rows: max-content max-content max-content;  
  grid-template-columns: 18ch 1fr;
  grid-row-gap: 2px;
  grid-column-gap: 5px;
  margin: 0;
}

@media all and (max-width: 800px) {
  .forum-post-grid {
  grid-template-areas: 
      "forum-post-header"
      "forum-post-user"
      "forum-post-post"
      "forum-post-footer";
  grid-template-rows: max-content max-content max-content max-content;  
  grid-template-columns: 1fr;
  }
}

.forum-post-header {
  grid-area: forum-post-header;
  padding: 0.5em;
  background: #000066;
  color: #FFFFFF;
  line-height: 1.5;
}
.forum-post-header a:link, .forum-post-header a:visited {
  color:white;
}
.forum-post-user {
  grid-area: forum-post-user;
  padding: 0.5em;
  background: #F6F9FB;
}
.forum-post-post {
  grid-area: forum-post-post;
  padding: 0.5em;
  background: #F6F9FB; 
  text-align: left;
}
.forum-post-footer {
  grid-area: forum-post-footer;
  background: #E9EFF4;
  padding: 0.3em;
}

.forum-post-datetime {
  font-size: 1.0em;
  text-align: left;
}
.forum-post-ip {
  text-align: left;
  font-size: 0.8em;
  margin-bottom: 5px;
}
.forum-post-postid {
  text-align: right;
  font-size: 1.0em;
}
.forum-post-username {
  min-width: 15ch;
  text-align: left;
  margin-bottom: 5px;
}
.forum-post-role {
  text-align: left;
  min-width: 15ch;
  font-size: 0.875em;
  margin-bottom: 5px;
}
.forum-post-quote {
  text-align: left;
  font-size: 0.875em;  
}
.forum-post-editpost {
  text-align: center;
}
.forum-post-reportpost {
  text-align: right;
  font-size: 0.875em;
}
  
@media all and (max-width: 800px) {
  .forum-post-user {
  background: #E9EFF4;    
  }
  .forum-post-role {
    text-align: right;
  }
  .forum-post-username {
    margin-bottom: 0px;
  }
}
.forum-post-posts {
  width:100%;
}
.forum-post-reply {
  text-align: left;
  width:100%;
  padding:5px;
}
/* ... */

